# moyklass-api

./: README.md  pyproject.toml  setup.cfg
moyklass_api/: client.py  group.py  lesson.py  payment.py  subscription.py  task.py  user.py
