[tool.poetry]
name = "moyklass-api"
version = "0.1.0"
description = ""
authors = ["Ivan Khimich <himivan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
